Remove unnecessary code